--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="main-wrapper">
             
             <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-briefcase"></i>Acrca de mi</h2>
+                <h2 class="section-title"><i class="fa fa-briefcase"></i>Acerca de mi</h2>
                 <div class="intro">
                     <p>Estudiante de séptimo semestre en la Universidad Piloto de Colombia, trabajador, de aprendizaje rápido,
                     responsable, asumo las consecuencias de mis actos.</p>
