--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">2236301</a></li>
                     
                    
-                    <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/BrianAcuna</a></li>
-                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@18ICF95</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/BrianAcuna" target="_blank">github.com/BrianAcuna</a></li>
+                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/18ICF95" target="_blank">@18ICF95</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
